[package]
name = "chaum_pedersen_zkp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8.5"
tonic = "0.10.0"
hex = "0.4.3"
prost = "0.12.0"
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"